# emoji-explainer6d3cc8bf-fd2e-4773-bfbc-8985b8495288

./: .env.example  README.md  pyproject.toml  schema.prisma
project/: createEmojiExplanation_service.py  deleteUser_service.py  explainEmoji_service.py  fetchEmojiExplanation_service.py  getUserProfile_service.py  listUsers_service.py  loginUser_service.py  processEmojiInput_service.py  registerUser_service.py  server.py  updateUser_service.py
